# FullCodeMirage

./: .gitmodules
Other_files/stuff for testing thermal/: Multiplexer.cpp  Multiplexer.h  main_TEMPORARY.cpp  slave_thermal.cpp  slave_thermal.h
Other_files/stuff for testing thermal/thermal-mcu-sixten/: .gitignore  README.md  git_upload_design.md  main_mcu_test.ino  spec_design.md
Other_files/stuff for testing thermal/thermal-mcu-sixten/include/: cli.h  config.h  control.h  i2c_comm.h  pwm.h  storage.h
Other_files/stuff for testing thermal/thermal-mcu-sixten/src/: cli.cpp  control.cpp  i2c_comm.cpp  (+3 more)
main-mcu/: .gitignore  CMakeLists.txt  listener.py
main-mcu/components/Ethernet/: CMakeLists.txt  w5500.c  wizchip_conf.c  wizchip_conf.h  wizsocket.c  wizsocket.h
main-mcu/main/: CMakeLists.txt  ConnectionLoss.cpp  ConnectionLoss.h  EthernetCom.cpp  EthernetCom.h  Humidity.cpp  Humidity.h  Initialize.cpp  Initialize.h  Multiplexer.cpp  Multiplexer.h  Neopixel.cpp  Neopixel.h  SDCard.cpp  SDCard.h  SDCard_initialization_reference  Settings.h  Slaves.cpp  Slaves.h  SystemStatus.h  Uart.cpp  Uart.h  main.cpp  main.h  read_sensors.cpp  read_sensors.h  testmain.cpp  watchdog.cpp  watchdog.h
pressure-mcu/: CMakeLists.txt  PressureControlUpdated.cpp  platformio.ini  sdkconfig.defaults  sdkconfig.old
pressure-mcu/dev/: PressureControlUpdated_with_app_main.cpp
pressure-mcu/main/: CMakeLists.txt  main.cpp
pressure-mcu/pressuretest/: PressureControlUpdated.cpp  PressureControlUpdated.h
thermal-mcu/: CMakeLists.txt
thermal-mcu/main/: CMakeLists.txt  main.cpp
